--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -37,7 +37,7 @@ Additional Effects:
 
 <div data-controller="dropdown" data-dropdown-close-on-click-outside-value="false">
   <nav class="sticky top-0 z-50 bg-white dark:bg-gray-900 border-b border-gray-200 dark:border-gray-700">
-    <div class="container-xl mx-auto px-4">
+    <div class="mx-auto" style="max-width: 1600px; padding-left: 56px; padding-right: 56px;">
       <div class="flex items-center justify-between h-16">
 
         <!-- Left section: Logo + Navigation -->
