--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -71,8 +71,8 @@ Additional Effects:
           <% if current_user %>
             <%= render 'shared/user_dropdown' %>
           <% else %>
-            <%= link_to "Sign In", sign_in_path, class: "btn-ghost btn-sm" %>
-            <%= link_to "Sign Up", sign_up_path, class: "btn-primary btn-sm" %>
+            <%= link_to "登录", sign_in_path, class: "btn-ghost btn-sm" %>
+            <%= link_to "注册", sign_up_path, class: "btn-primary btn-sm" %>
           <% end %>
         </div>
 
@@ -125,8 +125,8 @@ Additional Effects:
             <%= render 'shared/user_dropdown' %>
           <% else %>
             <div class="flex flex-col space-y-2">
-              <%= link_to "Sign In", sign_in_path, class: "btn-ghost btn-md w-full" %>
-              <%= link_to "Sign Up", sign_up_path, class: "btn-primary btn-md w-full" %>
+              <%= link_to "登录", sign_in_path, class: "btn-ghost btn-md w-full" %>
+              <%= link_to "注册", sign_up_path, class: "btn-primary btn-md w-full" %>
             </div>
           <% end %>
         </div>
