feat: add footnote support to markdown editor
- Installed markdown-it-footnote plugin
- Added footnote button to editor toolbar
- Implemented insertFootnote method with auto-numbering
- Fixed ESLint warnings for confirm/alert usage

Co-authored-by: haozan <haozanlawyer@gmail.com>

--- a/app/views/documents/edit.html.erb
+++ b/app/views/documents/edit.html.erb
@@ -173,6 +173,9 @@
             <button type="button" class="wemd-tool-btn hidden md:inline-flex" data-action="click->wemd-editor#insertQuote" title="引用">
               <%= lucide_icon "quote", class: "w-4 h-4" %>
             </button>
+            <button type="button" class="wemd-tool-btn hidden md:inline-flex" data-action="click->wemd-editor#insertFootnote" title="脚注">
+              <%= lucide_icon "superscript", class: "w-4 h-4" %>
+            </button>
             
             <div class="wemd-toolbar-divider hidden md:block"></div>
             
