feat: improve footnote rendering and display next footnote number in toolbar
- Refactor footnote CSS to display number and content inline
- Add dynamic footnote number display in editor toolbar
- Customize markdown-it footnote rendering rules
- Remove paragraph tags inside footnotes for better layout

Co-authored-by: haozan <haozanlawyer@gmail.com>

--- a/app/views/documents/edit.html.erb
+++ b/app/views/documents/edit.html.erb
@@ -175,6 +175,7 @@
             </button>
             <button type="button" class="wemd-tool-btn hidden md:inline-flex" data-action="click->wemd-editor#insertFootnote" title="脚注">
               <%= lucide_icon "superscript", class: "w-4 h-4" %>
+              <span class="ml-1 text-xs" data-wemd-editor-target="footnoteNumber">[1]</span>
             </button>
             
             <div class="wemd-toolbar-divider hidden md:block"></div>
