--- a/app/assets/themes/basic.css
+++ b/app/assets/themes/basic.css
@@ -324,30 +324,22 @@
 }
 
 #wemd .footnote-item {
-  display: flex;
+  list-style-type: none;
+  text-align: left;
+  margin-bottom: 8px;
+  line-height: 26px;
 }
 
 #wemd .footnote-num {
   display: inline;
-  width: 10%; /*神奇，50px就不可以*/
   background: none;
   font-size: 80%;
   opacity: 0.6;
-  line-height: 26px;
-  font-family: ptima-Regular, Optima, PingFangSC-light, PingFangTC-light, 'PingFang SC', Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+  margin-right: 4px;
+  font-family: Optima-Regular, Optima, PingFangSC-light, PingFangTC-light, 'PingFang SC', Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 }
 
-#wemd .footnote-item p {
-  display: inline;
-  font-size: 14px;
-  width: 90%;
-  padding: 0px;
-  margin: 0;
-  line-height: 26px;
-  color: #000000;
-  word-break:break-all;
-  width: calc(100%-50)
-}
+/* 移除旧的 .footnote-item p 样式，因为现在没有 p 标签了 */
 
 #wemd sub, sup {
   line-height: 0;
